--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zfn",
-  "version": "0.0.7",
+  "version": "0.0.9",
   "description": "A tiny utility for writing TS functions with runtime type validation.",
   "keywords": [
     "myzod",
@@ -21,15 +21,13 @@
     "type": "git",
     "url": "git+https://github.com/jmeyers91/zfn.git"
   },
-  "peerDependencies": {
-    "myzod": "1.7.*"
-  },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "myzod": "1.7.*",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "zod": "^1.11.17"
   },
   "jest": {
     "preset": "ts-jest",
