--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "NODE_ENV=test npx jest src",
     "clean": "rm -rf dist",
     "build": "npx tsc",
-    "prepare": "npm run clean && npm run build && npm run test"
+    "prepublishOnly": "npm run clean && npm run build && npm run test"
   },
   "repository": {
     "type": "git",
