--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zfn",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "A tiny utility for writing TS functions with runtime type validation.",
   "keywords": [
     "myzod",
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "NODE_ENV=test npx jest src",
     "clean": "rm -rf dist",
-    "build": "npx tsc",
+    "build": "npx tsc && rm -rf dist/__tests__",
     "prepublishOnly": "npm run clean && npm run build && npm run test"
   },
   "repository": {
